modified education part

--- a/Education.html
+++ b/Education.html
@@ -135,7 +135,7 @@
             width="150" class="mb-2 rounded shadow"></a>
         <h5 class="fw-bold text-success">Green University of Bangladesh</h5>
         <p class="mb-1"><strong>B.Sc. in Computer Science & Engineering</strong></p>
-        <p class="text-muted">2020 – Present</p>
+        <p class="text-muted">2021 – 2025</p>
         <p>Studying programming, networking, web & mobile development, blockchain-based systems, and more.</p>
       </div>
 
@@ -145,7 +145,7 @@
             alt="Stamford College Logo" width="100" class="mb-2 rounded shadow"></a>
         <h5 class="fw-bold text-primary">Stamford College, Dhaka</h5>
         <p class="mb-1"><strong>Higher Secondary Certificate (HSC)</strong></p>
-        <p class="text-muted">2017 – 2019</p>
+        <p class="text-muted">2017 – 2020 (improve)</p>
         <p>Completed HSC in Science with strong foundation in physics, math, chemistry, and computer science.</p>
       </div>
 
@@ -175,7 +175,7 @@
             alt="Mollika Kindergarten Logo" width="100" class="mb-2 rounded shadow"></a>
         <h5 class="fw-bold text-warning">Mollika Kindergarten</h5>
         <p class="mb-1"><strong>PSC (Primary School Certificate)</strong></p>
-        <p class="text-muted">~2010 – 2012</p>
+        <p class="text-muted">~2010 – 2011</p>
         <p>Completed primary education and built early literacy and numeracy skills.</p>
       </div>
 
@@ -185,7 +185,7 @@
             src="/image/YWCA.png" alt="YWCA Nursery Logo" width="80" class="mb-2 rounded shadow"></a>
         <h5 class="fw-bold text-info">YWCA Nursery School</h5>
         <p class="mb-1"><strong>KG – Class 3</strong></p>
-        <p class="text-muted">~2007 – 2009</p>
+        <p class="text-muted">~2006 – 2008</p>
         <p>My early education journey began here with playful learning and creativity.</p>
       </div>
     </div>
