--- a/Projects.html
+++ b/Projects.html
@@ -62,16 +62,17 @@
     <div class="row" id="projectGrid">
       <div class="col-md-4 mb-4 project-card" data-category="web" data-aos="fade-up">
         <div class="card h-100 shadow-sm">
-          <img src="/image/foodchain.jpg" class="card-img-top" alt="Project 1">
+          <img src="/image/foodsupplychainv1.jpeg" class="card-img-top" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">Food Supply Chain</h5>
-            <p class="card-text">A traceable supply chain system using Blockchain and NFC.</p>
-            <span class="badge bg-secondary m-1">PHP</span>
+            <p class="card-text">A traceable supply chain system using Blockchain.</p>
+            <span class="badge bg-secondary m-1">Python</span>
             <span class="badge bg-secondary m-1">Blockchain</span>
-            <span class="badge bg-secondary m-1">IoT</span>
+            <span class="badge bg-secondary m-1">Solidity</span>
+            <span class="badge bg-secondary m-1">Ethereum</span>
             <div class="mt-2">
-              <a href="#" class="btn btn-sm btn-success">Live Demo</a>
-              <a href="#" class="btn btn-sm btn-dark">GitHub</a>
+              <a href="https://foodsupplychainbysezanv1.netlify.app/" class="btn btn-sm btn-success">Live Demo</a>
+              <a href="https://github.com/yoursezan/FoodSupplyChain-v1" class="btn btn-sm btn-dark">GitHub</a>
             </div>
           </div>
         </div>
