--- a/Education.html
+++ b/Education.html
@@ -117,6 +117,7 @@
 
        
     </div>
+  </nav>
    
 
   <!-- Timeline Section -->
@@ -169,7 +170,7 @@
             alt="Mollika Kindergarten Logo" width="100" class="mb-2 rounded shadow"></a>
         <h5 class="fw-bold text-warning">Mollika Kindergarten</h5>
         <p class="mb-1"><strong>PSC (Primary School Certificate)</strong></p>
-        <p class="text-muted">~2010 – 2011</p>
+        <p class="text-muted">2010 – 2011</p>
         <p>Completed primary education and built early literacy and numeracy skills.</p>
       </div>
 
@@ -179,7 +180,7 @@
             src="/image/YWCA.png" alt="YWCA Nursery Logo" width="80" class="mb-2 rounded shadow"></a>
         <h5 class="fw-bold text-info">YWCA Nursery School</h5>
         <p class="mb-1"><strong>KG – Class 3</strong></p>
-        <p class="text-muted">~2006 – 2008</p>
+        <p class="text-muted">2006 – 2008</p>
         <p>My early education journey began here with playful learning and creativity.</p>
       </div>
     </div>
